haproxy-ingress-deploy.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: haproxy-ingress-controller
spec:
  replicas: 1
  revisionHistoryLimit: 3
  template:
    metadata:
      labels:
        k8s-app: haproxy-ingress-lb
    spec:
      terminationGracePeriodSeconds: 60
      imagePullSecrets:
        - name: myregistrykey
      containers:
        - name: haproxy-ingress-controller
          image: myregistry.docker/haproxy-controller:latest
          #imagePullPolicy: Always
          ports:
            - name: http
              protocol: TCP
              containerPort: 80
            - name: https
              protocol: TCP
              containerPort: 443
            - name: stats
              protocol: TCP
              containerPort: 8001
