vtm-ingress-deploy.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: vtm-ingress-controller
spec:
  replicas: 1
  revisionHistoryLimit: 3
  template:
    metadata:
      labels:
        k8s-app: vtm-ingress-lb
    spec:
      terminationGracePeriodSeconds: 60
      imagePullSecrets:
        - name: myregistrykey
      containers:
        - name: vtm-ingress-controller
          image: myregistry.docker/vtm-controller:latest
          #imagePullPolicy: Always
          command: ["/usr/local/zeus/runzeus.sh"]
          ports:
            - name: http
              protocol: TCP
              containerPort: 80
            - name: https
              protocol: TCP
              containerPort: 443
            - name: vtm-api
              protocol: TCP
              containerPort: 9070
            - name: vtm-gui
              protocol: TCP
              containerPort: 9090
