echoheaders2-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: echoheaders2
  labels:
    app: echoheaders2
spec:
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: echoheaders2
  type: NodePort
