haproxy-ingress-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: haproxy-ingress
spec:
  type: NodePort
  ports:
    - port: 80
      name: http
      nodePort: 30062
    - port: 8001
      name: stats
      nodePort: 30091
  selector:
    k8s-app: haproxy-ingress-lb
