vtm-ingress-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: vtm-ingress
spec:
  type: NodePort
  ports:
    - port: 80
      name: http
      nodePort: 30063
    - port: 9090
      name: gui
      nodePort: 30090
  selector:
    k8s-app: vtm-ingress-lb
